# crypto-project-risk-radar

./: .gitignore  README.md  pyproject.toml
data/raw/: README.md
data/sample/: projects.json
docs/: professional_boundaries.md
notebooks/: 00_sanity_check.ipynb
src/crypto_risk_radar/: __init__.py  cli.py  io.py  models.py  report.py  rubric.py
tests/: test_io_smoke.py  test_rubric_smoke.py
